fix: fix giscus right covered border.

--- a/styles/global.css
+++ b/styles/global.css
@@ -45,8 +45,7 @@ body {
   width: 100%;
 }
 .giscus-frame {
-  border: none;
-  color-scheme: normal;
+  padding-right: 1px;
 }
 
 .static-tweet-emoji {
